[package]
name = "todo_app"
version = "0.1.0"
authors = ["emendoza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
serde = "1.0.92"
serde_derive = "1.0.92"
diesel = { version = "1.4.2", features = ["sqlite"] }
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "diesel_sqlite_pool"]